# gribview

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh
.github/workflows/: bottle.yml  build.yml
docs/: index.html  packaging.md  sample.grib
homebrew/: gribview.rb
pages/: index.html
src/: colormap512.h  gribview.cpp
tools/: genColorMapH.py  generate_release.bash  homebrew_tap_install.sh  make_icon.sh  package_homebrew.sh  package_macos.sh  release.md  release_homebrew.sh
